--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://Jackps10.github.io/organograma-com-react",
+  "homepage": "http://jackps10.github.io/organograma-com-react/",
   "name": "organograma-com-react",
   "version": "0.1.0",
   "private": true,
